# lang-dev

couch-lang/: GRAMMAR.txt  README.md
couch-lang/ast/: Cargo.toml
couch-lang/ast/src/: lib.rs
couch-lang/evaluator/: Cargo.toml
couch-lang/evaluator/src/: lib.rs  value.rs
couch-lang/lexer/: Cargo.toml
couch-lang/lexer/src/: indexed_char_iterator.rs  lib.rs  token_variant.rs
couch-lang/parser/: Cargo.toml
couch-lang/parser/src/: error_helper.rs  lib.rs
couch-lang/repl/: Cargo.toml
couch-lang/repl/src/: main.rs
riara/: Cargo.toml  README.md
riara/examples/: hello_world.riara  hello_world.rml  test.rml
riara/src/: lexer.rs  main.rs  parsed.rs  parser.rs  pos.rs  runtime.rs  token.rs  utils.rs
riara_isnt_a_recursive_acronym/: Cargo.toml
riara_isnt_a_recursive_acronym/examples/: hello_world.riara
riara_isnt_a_recursive_acronym/src/: lexer.rs  main.rs  parsed.rs  parser.rs  pos.rs  runtime.rs  token.rs
