[package]
name = "couch-lang-evaluator"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
couch-lang-parser = { version = "0.1.1", path = "../parser" }

[dev-dependencies]
couch-lang-lexer = { version = "0.1.1", path = "../lexer" }
pretty_assertions = "1.3.0"
