[package]
name = "couch-lang-repl"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
couch-lang-lexer = { version = "0.1.0", path = "../lexer" }
couch-lang-parser = { version = "0.1.0", path = "../parser" }
couch-lang-evaluator = { version = "0.1.0", path = "../evaluator" }
